<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_mode_utils</name>
  <version>0.0.1</version>
  <description>Common utilities for RL external modes in PX4</description>
  <maintainer email="dragonboat_xxy@163.com">Xiangyuan Xie</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>px4_ros2_cpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>rosbag2_storage</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>px4_ros2_cpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rosbag2_cpp</build_export_depend>
  <build_export_depend>rosbag2_storage</build_export_depend>

  <depend>onnxruntime_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
